<resources>
    <string name="app_name">Mood</string>
    <string name="get_moody">Get Moody</string>
    <string name="this_is_the_welcome_message">This is the Welcome Message</string>
    <string name="happy_music">Happy Music</string>
    <string name="sad_music">Sad Music</string>
    <string name="angry_music">Angry Music</string>
    <string name="when_you_re_sad_do_you_like_to_listen_to">When you\'re sad, do you like to listen to:</string>
    <string name="when_you_re_mad_do_you_like_to_listen_to">When you\'re mad, do you like to listen to:</string>
    <string name="when_you_re_happy_do_you_like_to_listen_to">When you\'re happy, do you like to listen to:</string>
    <string name="the_happiest_music_possible">The Happiest Music Possible</string>
    <string name="sadder_music">Sadder Music</string>
    <string name="angrier_music">Angrier Music</string>
    <string name="the_saddest_music_possible">The Saddest Music Possible</string>
    <string name="the_angriest_music_possible">The Angriest Music Possible</string>
    <string name="happier_music">Happier Music</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="submit">Submit</string>
    <string name="preferences">Preferences</string>
    <string name="light_dark">Light/Dark</string>
    <string name="welcome_to_mood_press_the_button_below_to_start_embracing_your_mood">Welcome to Mood! Press the button below to start embracing your mood.</string>
</resources>

